k8s/services/dev/auth-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: circleguard-dev
  labels:
    app: auth-service
    version: v1
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
        version: v1
    spec:
      serviceAccountName: circleguard-sa
      containers:
        - name: auth-service
          image: cgregicesi.azurecr.io/circleguard/circleguard-auth-service:dev-PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8180
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8180
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8180
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: circleguard-dev
spec:
  selector:
    app: auth-service
  ports:
    - port: 8180
      targetPort: 8180
  type: ClusterIP
