k8s/services/dev/gateway-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: circleguard-dev
  labels:
    app: gateway-service
    version: v1
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
        version: v1
    spec:
      serviceAccountName: circleguard-sa
      containers:
        - name: gateway-service
          image: cgregicesi.azurecr.io/circleguard/circleguard-gateway-service:dev-PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8087
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8087
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8087
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: circleguard-dev
spec:
  selector:
    app: gateway-service
  ports:
    - port: 8087
      targetPort: 8087
  type: LoadBalancer
