k8s/services/dev/identity-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-service
  namespace: circleguard-dev
  labels:
    app: identity-service
    version: v1
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-service
  template:
    metadata:
      labels:
        app: identity-service
        version: v1
    spec:
      serviceAccountName: circleguard-sa
      containers:
        - name: identity-service
          image: cgregicesi.azurecr.io/circleguard/circleguard-identity-service:dev-PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8083
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8083
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: circleguard-dev
spec:
  selector:
    app: identity-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
