k8s/services/dev/promotion-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotion-service
  namespace: circleguard-dev
  labels:
    app: promotion-service
    version: v1
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: promotion-service
  template:
    metadata:
      labels:
        app: promotion-service
        version: v1
    spec:
      serviceAccountName: circleguard-sa
      containers:
        - name: promotion-service
          image: cgregicesi.azurecr.io/circleguard/circleguard-promotion-service:dev-PLACEHOLDER
          imagePullPolicy: Always
          ports:
            - containerPort: 8088
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "300m"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8088
            initialDelaySeconds: 90
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8088
            initialDelaySeconds: 60
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: promotion-service
  namespace: circleguard-dev
spec:
  selector:
    app: promotion-service
  ports:
    - port: 8088
      targetPort: 8088
  type: ClusterIP
